@@ -33,7 +33,21 @@ public class LLongTest {
         //return (int)value;
         b.hashCode();
 
-        new Long(10).hashCode();
+
+        int x = 1;
+        x <<= 3;
+        log.info("结果：{}",x);
+
+        x = (int)(13441>>> 32);
+        log.info("结果：{}",x);
+
+       int dddd = "10000100000000000000000000000000".length();
+
+       // int bb = 27 - Integer.valueOf("10000100000000000000000000000000",2).intValue() ;
+
+
+
+        log.info("--{}",Integer.MIN_VALUE);
 
 
 
